Fix regression where navigating to debug URLs didn't update the omnibox.

The regression test also exposed that this was broken with PlzNavigate, so fix that as well by not discarding pending entries when encountering navigation errors for debug URLs.

This regressed in r422302.

BUG=655109
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_site_isolation

Review-Url: https://codereview.chromium.org/2415173002
Cr-Commit-Position: refs/heads/master@{#425415}

Former-commit-id: 0b18f8385af6097264889f6e368bbd3b31c11b09